--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<main class="Accio" id="Job">
+<main class="accio" id="job">
 	<p class="hello-accio-job">Hello Accio Job</p>
 </main>
 
